[package]
name = "punch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
owo-colors = "4.3.0"
prometheus = "0.14.0"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream", "gzip"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = "0.38.4"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "io-util", "time", "net", "sync"] }
tokio-stream = "0.1.18"
tower-http = "0.6.8"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
which = "8.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
